<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_signupactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BTCSecondaryDark"
    android:backgroundTint="#14D0BCFF"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:theme="@style/Theme.BTC"
    tools:context=".SignupActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageView_signup_logo"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/all_logo_description"
        android:scaleType="fitCenter"
        android:textColorHint="#D0BCFF"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/ProgressBar_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        app:indicatorColor="@color/purple_200"
        app:trackColor="@color/BTCPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AutoCompleteTextViewLayout_signup_school"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.30"
        android:hint="@string/all_label_school"
        android:textColorHint="#D0BCFF"
        app:boxStrokeColor="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#4C00FF">

        <AutoCompleteTextView
            android:id="@+id/AutoCompleteTextView_signup_school"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:dropDownHeight="wrap_content"
            android:focusable="false"
            android:hint="@string/all_label_school"
            android:isScrollContainer="false"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout_signup_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.30"
        android:hint="@string/all_label_username"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout_signup_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.30"
        android:hint="@string/all_label_password"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout_signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.30"
        android:hint="@string/all_label_confirm_password"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/button_signup_signup"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_signup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.15"
        app:layout_constraintEnd_toEndOf="@+id/button_signup_cancel"
        app:layout_constraintStart_toEndOf="@+id/button_signup_cancel">

        <Button
            android:id="@+id/button_signup_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:backgroundTint="#4A4458"
            android:text="@string/all_cancel"
            android:textColor="#E8DEF8"
            app:layout_constraintEnd_toStartOf="@+id/button_signup_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_signup_signup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:backgroundTint="@color/BTCPrimary"
            android:text="@string/all_label_signup"
            android:textColor="#381E72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_signup_cancel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textview_signup_helpertext"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_weight=".20"
        android:gravity="center"
        android:text="@string/signup_helpmessageplaceholder"
        android:textColor="#848083"
        tools:ignore="TextContrastCheck" />
</LinearLayout>