<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1B1F"
    android:backgroundTint="#14D0BCFF"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:theme="@style/Theme.BTC"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editView_profile_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.1"
        android:enabled="false"
        android:hint="@string/all_label_username"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_profile_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editView_profile_oldPass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:hint="@string/all_label_oldPassword"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_profile_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editView_profile_newPass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:hint="@string/all_label_newPassword"
        android:textColorHint="#D0BCFF"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CAC4D0"
        app:hintTextColor="#D0BCFF"
        app:placeholderTextColor="#D0BCFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_profile_newpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_button_update"
        android:layout_width="214dp"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:backgroundTint="@color/BTCPrimary"
        android:text="@string/profile_button_update"
        android:textColor="#381E72" />

    <Button
        android:id="@+id/profile_button_cancel"
        android:layout_width="217dp"
        android:layout_height="23dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_weight="0.5"
        android:backgroundTint="#4A4458"
        android:text="@string/profile_button_cancel"
        android:textColor="#E8DEF8" />

    <Button
        android:id="@+id/profile_button_signout"
        android:layout_width="244dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_weight="0.5"
        android:backgroundTint="#4A4458"
        android:text="@string/profile_button_signout"
        android:textColor="#E8DEF8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/profile_remindermessageplaceholder"
        android:textColor="#848083"
        tools:ignore="TextContrastCheck" />

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#1C1B1F"-->
<!--    android:orientation="vertical"-->
<!--    tools:context=".ProfileActivity">-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginBottom="58dp"-->
<!--        android:layout_weight="1"-->
<!--        android:scaleType="fitCenter"-->
<!--        app:srcCompat="@drawable/logo" />-->

<!--    <AutoCompleteTextView-->
<!--        android:id="@+id/autoCompleteTextView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="AutoCompleteTextView" />-->

<!--    <AutoCompleteTextView-->
<!--        android:id="@+id/autoCompleteTextView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="AutoCompleteTextView" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="Button" />-->

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="Button" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="TextView" />-->
<!--</LinearLayout>-->

