<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/BTCSecondaryDark"
            android:backgroundTint="#14D0BCFF"
            android:backgroundTintMode="src_over"
            android:orientation="vertical"
            android:paddingTop="2dp"
            android:paddingBottom="16dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="#1A000000">

                <Button
                    android:id="@+id/Button_itemconfession_heart"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:text="@string/item_confession_heartplaceholder"
                    android:textAlignment="center"
                    android:textColor="#E6E1E5"
                    app:icon="@drawable/ic_heart_outline"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="#E6E1E5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/Button_itemconfession_comment"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/item_confession_commentplaceholder"
                    android:textAlignment="center"
                    android:textColor="#E6E1E5"
                    app:icon="@drawable/ic_chat_bubble_outline"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="#E6E1E5"
                    app:layout_constraintEnd_toStartOf="@+id/Button_itemconfession_heart" />

                <TextView
                    android:id="@+id/textView_itemconfession_username"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="14dp"
                    android:gravity="center"
                    android:text="@string/item_confession_usernameplaceholder"
                    android:textAllCaps="true"
                    android:textColor="@color/BTCPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_itemconfession_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lineSpacingExtra="8sp"
                android:maxLines="4"
                android:text="@string/item_confession_textplaceholder"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#E6E1E5" />

            <!-- Buttons -->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>